--- a/src/ui/Dockerfile
+++ b/src/ui/Dockerfile
@@ -1,8 +1,14 @@
-FROM ruby:2.2
+FROM ubuntu:16.04
 
-ENV POST_SERVICE_HOST=post POST_SERVICE_PORT=5000 COMMENT_SERVICE_HOST=commenttt COMMENT_SERVICE_PORT=9292 APP_HOME=/app
+ENV POST_SERVICE_HOST=post \
+    POST_SERVICE_PORT=5000 \
+    COMMENT_SERVICE_HOST=comment \
+    COMMENT_SERVICE_PORT=9292 \
+    APP_HOME=/app
 
-RUN apt-get update -qq && apt-get install -y build-essential
+RUN apt-get update \
+    && apt-get install -y ruby-full ruby-dev build-essential \
+    && gem install bundler --no-ri --no-rdoc
 
 RUN mkdir $APP_HOME
 
