--- a/src/ui/Dockerfile
+++ b/src/ui/Dockerfile
@@ -1,10 +1,10 @@
 FROM alpine:latest
 
-ENV POST_SERVICE_HOST=post \
-    POST_SERVICE_PORT=5000 \
-    COMMENT_SERVICE_HOST=comment \
-    COMMENT_SERVICE_PORT=9292 \
-    APP_HOME=/app
+#ENV POST_SERVICE_HOST=post \
+#    POST_SERVICE_PORT=5000 \
+#    COMMENT_SERVICE_HOST=comment \
+#    COMMENT_SERVICE_PORT=9292 \
+ENV APP_HOME=/app
 
 RUN apk update \
     && apk add --no-cache ruby-full ruby-dev build-base \
