#20 - автоматический inventory переделан

--- a/gitlab-ci/ansible/ansible.cfg
+++ b/gitlab-ci/ansible/ansible.cfg
@@ -1,11 +1,16 @@
 [defaults]
+inventory = inventory.ini
 remote_user = ubuntu
 private_key_file = ~/.ssh/ubuntu
 host_key_checking = False
 retry_files_enabled = False
 deprecation_warnings=False
 
+[inventory]
+enable_plugins = ini
+#enable_plugins = host_list, script, auto, yaml, ini, toml
+
 [diff]
-# Включимобязательныйвывод diff при наличиии змененийи вывод 5 строк контекста
+# Включимобязательныйвывод diff при наличиии изменений - вывод 5 строк контекста
 always = True
 context = 5
