#20 - сделаны роли ansible

--- a/gitlab-ci/ansible/ansible.cfg
+++ b/gitlab-ci/ansible/ansible.cfg
@@ -5,12 +5,13 @@ private_key_file = ~/.ssh/ubuntu
 host_key_checking = False
 retry_files_enabled = False
 deprecation_warnings=False
+roles_path = ./roles
 
 [inventory]
 enable_plugins = ini
 #enable_plugins = host_list, script, auto, yaml, ini, toml
 
 [diff]
-# Включимобязательныйвывод diff при наличиии изменений - вывод 5 строк контекста
+# вывод diff при наличиии изменений - вывод 5 строк контекста
 always = True
 context = 5
