#20 - исправление окружения dev

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: ruby:2.4.2
 stages:
   - build
   - test
-  - renew
+  - review
 
 variables:
   DATABASE_URL: "mongodb://mongo/user_posts"
@@ -28,7 +28,7 @@ test_integration_job:
   script:
     - echo 'Testing 2'
 
-eploy_dev_job:
+deploy_dev_job:
   stage: review
   script:
     - echo 'Deploy'
