--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,5 +1,6 @@
 USER=---------
-TAG_UI=3.0
-TAG_POST=1.0
-TAG_COMMENT=1.0
 PORT_UI=80
+TAG_UI=latest
+TAG_POST=latest
+TAG_COMMENT=latest
+TAG_PR=latest
