--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -41,10 +41,23 @@ services:
     networks:
       - front_net
 
+  grafana:
+    image: grafana/grafana:5.0.0
+    volumes:
+      - grafana_data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=secret
+    depends_on:
+      - prometheus
+    ports:
+      - 3000:3000
+    networks:
+      - front_net
 
 volumes:
   prometheus_data:
-
+  grafana_data:
 
 networks:
   front_net:
@@ -52,10 +65,10 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: 10.0.11.0/28
+        - subnet: 10.0.10.0/28
   back_net:
     driver: bridge
     ipam:
       driver: default
       config:
-        - subnet: 10.0.11.16/28
+        - subnet: 10.0.11.0/28
