--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -32,3 +32,8 @@ scrape_configs:
 #    static_configs:
 #      - targets:
 #          - "grafana:3000"
+
+  - job_name: 'post'
+    static_configs:
+      - targets:
+          - 'post:5000'
