--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -55,6 +55,16 @@ services:
     networks:
       - front_net
 
+  alertmanager:
+    image: ${USER_NAME}/alertmanager:${TAG_PR}
+    command:
+      - '--config.file=/etc/alertmanager/config.yml'
+    ports:
+      - 9093:9093
+    networks:
+      - front_net
+
+
 volumes:
   prometheus_data:
   grafana_data:
