--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,6 +1,7 @@
 USER_NAME=---------
 PORT_UI=9292
-TAG_UI=latest
+AG_UI=latest
 TAG_POST=latest
 TAG_COMMENT=latest
 TAG_PR=latest
+ZIPKIN_ENABLED=true
