#25.6.1 - Fix error .env.example

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,7 +1,7 @@
 USER_NAME=---------
 PORT_UI=9292
-TAG_UI=latest
-TAG_POST=latest
-TAG_COMMENT=latest
-TAG_PR=latest
+TAG_UI=logging
+TAG_POST=logging
+TAG_COMMENT=logging
+TAG_PR=logging
 ZIPKIN_ENABLED=true
