--- a/docker/.env.example
+++ b/docker/.env.example
@@ -3,5 +3,6 @@ PORT_UI=9292
 TAG_UI=logging
 TAG_POST=logging
 TAG_COMMENT=logging
-TAG_PR=logging
+TAG_MON=logging
+TAG_LOG=logging
 ZIPKIN_ENABLED=true
