--- a/docker/docker-compose-logging.yml
+++ b/docker/docker-compose-logging.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   fluentd:
-    image: ${USER_NAME}/fluentd:logging
+    image: ${USER_NAME}/fluentd:${TAG_LOG}
     ports:
       - "24224:24224"
       - "24224:24224/udp"
