--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   prometheus:
-    image: ${USER_NAME}/prometheus:${TAG_PR}
+    image: ${USER_NAME}/prometheus:${TAG_MON}
     ports:
       - "9090:9090"
     volumes:
@@ -56,7 +56,7 @@ services:
       - front_net
 
   alertmanager:
-    image: ${USER_NAME}/alertmanager:${TAG_PR}
+    image: ${USER_NAME}/alertmanager:${TAG_MON}
     command:
       - '--config.file=/etc/alertmanager/config.yml'
     ports:
