--- a/src/post-py/Dockerfile
+++ b/src/post-py/Dockerfile
@@ -1,15 +1,14 @@
 FROM python:3.6.0-alpine
 
-ENV POST_DATABASE_HOST post_db
-ENV POST_DATABASE posts
+ENV POST_DATABASE_HOST=post_db \
+    POST_DATABASE=posts
 
 WORKDIR /app
 ADD . /app
 
-RUN apk --no-cache --update add build-base gcc musl-dev && \
+RUN pip install --upgrade pip && \
+    apk --no-cache --update add build-base gcc musl-dev && \
     pip install -r /app/requirements.txt && \
     apk del build-base
-
-EXPOSE 5000
 
 CMD ["python3", "post_app.py"]
