--- a/src/ui/Dockerfile
+++ b/src/ui/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:latest
+FROM ruby:2.2
 
 #ENV POST_SERVICE_HOST=post \
 #    POST_SERVICE_PORT=5000 \
@@ -6,13 +6,13 @@ FROM alpine:latest
 #    COMMENT_SERVICE_PORT=9292 \
 ENV APP_HOME=/app
 
-RUN apk update \
-    && apk add --no-cache ruby-full ruby-dev build-base \
-    && gem install bundler:1.17.2
+RUN apt-get update -qq && \
+    apt-get install -y build-essential
 
 RUN mkdir $APP_HOME
 
 WORKDIR $APP_HOME
+
 ADD Gemfile* $APP_HOME/
 RUN bundle install
 ADD . $APP_HOME
