--- a/kubernetes/ansible/node-all.yml
+++ b/kubernetes/ansible/node-all.yml
@@ -38,8 +38,6 @@
      apt:
        name: kubeadm=1.19.0-00
        state: present
-       update_cache: true
-
 
 - hosts: master
   become: yes
@@ -49,4 +47,13 @@
        name: kubectl=1.19.0-00
        state: present
        force: yes
-       update_cache: true
+
+   - name: Disable SWAP since kubernetes can`t work with swap enabled (1/2)
+     shell: |
+       swapoff -a
+
+   - name: Disable SWAP in fstab since kubernetes can`t work with swap enabled (2/2)
+     replace:
+       path: /etc/fstab
+       regexp: '^([^#].*?\sswap\s+sw\s+.*)$'
+       replace: '# \1'
