#27.7- Fix kubeadm init

--- a/kubernetes/ansible/master.yml
+++ b/kubernetes/ansible/master.yml
@@ -2,7 +2,8 @@
   become: yes
   tasks:
     - name: initialize the cluster
-      shell: kubeadm init --pod-network-cidr=10.244.0.0/16 >> cluster_initialized.txt
+#      shell: kubeadm init --pod-network-cidr=10.244.0.0/16 >> cluster_initialized.txt
+      shell: kubeadm init --apiserver-cert-extra-sans={{ansible_host}} --apiserver-advertise-address=0.0.0.0 --control-plane-endpoint={{ansible_host}} --pod-network-cidr=10.244.0.0/16 >> cluster_initialized.txt
       args:
         chdir: $HOME
         creates: cluster_initialized.txt
