--- a/kubernetes/terraform/terraform.tfvars.example
+++ b/kubernetes/terraform/terraform.tfvars.example
@@ -1,9 +1,10 @@
-cloud_id                 = "----------"
-folder_id                = "----------"
-image_id                 = "----------"
-subnet_id                = "----------"
+cloud_id                 = "--------------------"
+folder_id                = "--------------------"
 zone                     = "ru-central1-a"
-private_key_path         = "~/.ssh/ubuntu"
 public_key_path          = "~/.ssh/ubuntu.pub"
-service_account_key_file = "~/key.json"
-count_app                = 2
+service_account_key_file = "/root/key.json"
+subnet_id                = "--------------------"
+private_key_path         = "~/.ssh/ubuntu"
+count_host               = 3
+count_master             = 1
+count_worker             = 2
