--- a/kubernetes/Charts/ui/templates/service.yaml
+++ b/kubernetes/Charts/ui/templates/service.yaml
@@ -30,7 +30,8 @@ spec:
   ports:
   - port: {{ .Values.service.externalPort }}
     protocol: TCP
-    targetPort: 9292
+#    targetPort: 9292
+    targetPort: {{ .Values.service.internalPort }}
   selector:
     app: reddit
     component: ui
