#30.4 - Add reddit/values (Page 53)

--- a/kubernetes/Charts/ui/values.yaml
+++ b/kubernetes/Charts/ui/values.yaml
@@ -6,3 +6,11 @@ service:
 image:
   repository: ge2rg312qe/ui
   tag: latest
+
+ingress:
+  class: nginx
+
+postHost:
+postPort:
+commentHost:
+commentPort:
